add to abiut section

--- a/index.html
+++ b/index.html
@@ -43,17 +43,8 @@
                     </div>
                     <div class="col-2">
                         <h1 class="font">ABOUT Me</h1>
-                        <p>
-                            Lorem, ipsum dolor sit amet consectetur adipisicing elit. Debitis, fugiat eius tempora
-                            molestiae quae voluptatem facilis, maxime sapiente laudantium commodi veritatis? Obcaecati
-                            aliquam exercitationem, consequatur nisi voluptas totam rem laboriosam?
-                            Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quas, perferendis nam. Officiis
-                            repellendus tempora iste voluptate sequi eum, blanditiis molestias, delectus itaque
-                            excepturi neque? Quibusdam adipisci voluptatum quisquam porro quas exercitationem facere
-                            alias autem consequatur corrupti odit id aliquam aliquid incidunt itaque nihil harum
-                            consectetur sunt, minima dolor nobis repellat veniam! Asperiores, exercitationem.
-
-                        </p>
+                        <p> Hello, I'm Mohd Mamoon, a passionate and versatile Full Stack Web Developer With aI specialize in crafting
+                            dynamic and responsive web applications. in both front-end and back-end technologies. </p>
                     </div>
                 </div>
             </div>
