add to message in spotify clone

--- a/index.html
+++ b/index.html
@@ -43,7 +43,8 @@
                     </div>
                     <div class="col-2">
                         <h1 class="font">ABOUT Me</h1>
-                        <p> Hello, I'm Mohd Mamoon, a passionate and versatile Full Stack Web Developer With aI specialize in crafting
+                        <p> Hello, I'm Mohd Mamoon, a passionate and versatile Full Stack Web Developer With aI
+                            specialize in crafting
                             dynamic and responsive web applications. in both front-end and back-end technologies. </p>
                     </div>
                 </div>
@@ -60,7 +61,9 @@
                         <img src="image/work-1.png">
                         <div class="layer">
                             <h3>Spotify Clone</h3>
-                            <p>Lorem ipsum dolor sit amet consectetur, </p>
+                            <p>Your project description goes here. Provide a brief overview of the features,
+                                technologies used, or any other relevant information about your Spotify Clone.</p>
+
                             <a href="#"> <i class="fa-solid fa-up-right-from-square"></i></a>
 
                         </div>
