--- a/index.html
+++ b/index.html
@@ -61,8 +61,7 @@
                         <img src="image/work-1.png">
                         <div class="layer">
                             <h3>Spotify Clone</h3>
-                            <p>Your project description goes here. Provide a brief overview of the features,
-                                technologies used, or any other relevant information about your Spotify Clone.</p>
+                            <p>YDiscover new music, create playlists,</p>
 
                             <a href="#"> <i class="fa-solid fa-up-right-from-square"></i></a>
 
@@ -72,7 +71,7 @@
                         <img src="image/work-2.png">
                         <div class="layer">
                             <h3>Aluminai System</h3>
-                            <p>Lorem ipsum dolor sit amet consectetur.</p>
+                            <p>Outline its key features, technologies employed,</p>
                             <a href="#"> <i class="fa-solid fa-up-right-from-square"></i></a>
 
                         </div>
@@ -82,7 +81,7 @@
                         <img src="image/work-3.png">
                         <div class="layer">
                             <h3>Gym Tips</h3>
-                            <p>Lorem ipsum dolor sit amet </p>
+                            <p>Enjoy a rich set of features</p>
                             <a href="#"> <i class="fa-solid fa-up-right-from-square"></i></a>
 
                         </div>
