add in about section

--- a/index.html
+++ b/index.html
@@ -43,9 +43,9 @@
                     </div>
                     <div class="col-2">
                         <h1 class="font">ABOUT Me</h1>
-                        <p> Hello, I'm Mohd Mamoon, a passionate and versatile Full Stack Web Developer With aI
-                            specialize in crafting
-                            dynamic and responsive web applications. in both front-end and back-end technologies. </p>
+                        <p>Hello, I'm Mohd Mamoon, a passionate and versatile Full Stack Web Developer With aI
+                            specialize in crafting dynamic and responsive web applications. in both front-end and
+                            back-end technologies</p>
                     </div>
                 </div>
             </div>
@@ -61,7 +61,7 @@
                         <img src="image/work-1.png">
                         <div class="layer">
                             <h3>Spotify Clone</h3>
-                            <p>YDiscover new music, create playlists,</p>
+                            <p>Discover new music, create playlists,</p>
 
                             <a href="#"> <i class="fa-solid fa-up-right-from-square"></i></a>
 
