--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
             <nav>
                 <ul>
                     <li><a href="#M1">Home</a></li>
-                    <!-- <li><a href="#M2">About Me</a> </li> -->
+                    <li><a href="#M2">About Me</a> </li>
                     <li><a href="#M3">My Project</a></li>
                     <li><a href="#M4">Contact</a> </li>
                 </ul>
@@ -32,16 +32,16 @@
         <div class="I">
             <div class="name">
                 <div class="left">
-                  
-                        <ul>
-                            <li>Hi!! I Am <span> MAMOON</span><br></li>
-                            <p class="bio center-text">I'm a web developer and here is my portfolio website,</p>
-                            <p class="bio">here you' learn about my journy as a web developer.</p>
-                        </ul>
-                    
+
+                    <ul>
+                        <li>Hi!! I Am <span> MAMOON</span><br></li>
+                        <li>Web Developer</li>
+
+                    </ul>
+
                 </div>
                 <div class="right">
-                    <div class="img">
+                    <div id="img">
                         <img src="image/about.png">
                     </div>
                 </div>
@@ -58,9 +58,10 @@
                 </div>
                 <div class="col-2">
                     <h1 class="font">ABOUT Me</h1>
-                    <p>Hello, I'm Mohd Mamoon, a passionate and versatile Full Stack Web Developer With aI
-                        specialize in crafting dynamic and responsive web applications. in both front-end and
-                        back-end technologies</p>
+                    <p>Hello, I'm Mohd Mamoon, a passionate and versatile Full Stack Web Developer. I specialize in
+                        creating dynamic and responsive web applications, proficient in both front-end and back-end
+                        technologies. My goal is to craft seamless and engaging digital experiences that leave a lasting
+                        impact.</p>
                 </div>
             </div>
         </div>
