--- a/index.html
+++ b/index.html
@@ -5,134 +5,177 @@
 
     <title>PORTFOLIO</title>
     <link rel="stylesheet" href="style.css">
-    <!-- <link rel="stylesheet" href="utillity.css"> -->
+    <link rel="stylesheet" href="utility.css">
 
 </head>
 
 <body>
     <!-------------------HOME----------------------------------->
-    <header id="M1">
-        <div class="logo">
-            <p>MAMOON</p>
-        </div>
-        <div class="nav">
-            <nav>
-                <ul>
-                    <li><a href="#M1">Home</a></li>
-                    <li><a href="#M2">About Me</a> </li>
-                    <li><a href="#M3">My Project</a></li>
-                    <li><a href="#M4">Contact</a> </li>
-                </ul>
-            </nav>
-        </div>
-
-    </header>
-
-    <div id="home">
-        <div class="I">
-            <div class="name">
-                <div class="left">
-
+    <div>
+        <header id="M1">
+            <div class="logo">
+                <p>MAMOON</p>
+            </div>
+            <div class="nav">
+                <nav>
                     <ul>
-                        <li>Hi!! I Am <span> MAMOON</span><br></li>
-                        <li>Web Developer</li>
-
+                        <li><a href="#M3">Project</a></li>
+                        <li><a href="#M4">Skill</a></li>
+                        <li><a href="#M2">About Me</a> </li>
+                        <li><a href="#M5">Contact</a> </li>
                     </ul>
+                </nav>
+            </div>
 
+        </header>
+        <!-- <div class="horizontal"></div> -->
+        <div id="home">
+            <div class="I">
+                <div class="name">
+                    <div class="left">
+
+                        <ul>
+                            <li>Hi!! I Am <span> MAMOON</span><br></li>
+                            <li>Web Developer</li>
+
+                        </ul>
+
+                    </div>
+                    <div class="right">
+                        <div id="img">
+                            <img src="image/M.png">
+                        </div>
+                    </div>
                 </div>
-                <div class="right">
-                    <div id="img">
+            </div>
+        </div>
+        <!-- <div class="horizontal"></div> -->
+        <!-----------------ABOUT----------------------------------------->
+        <div id="M2">
+
+
+            <div class="about">
+                <div class="row">
+                    <div class="col-1">
                         <img src="image/about.png">
                     </div>
-                </div>
-            </div>
-        </div>
-    </div>
-
-    <!-----------------ABOUT----------------------------------------->
-    <div id="M2">
-        <div class="about">
-            <div class="row">
-                <div class="col-1">
-                    <img src="image/about.png">
-                </div>
-                <div class="col-2">
-                    <h1 class="font">ABOUT Me</h1>
-                    <p>Hello, I'm Mohd Mamoon, a passionate and versatile Full Stack Web Developer. I specialize in
-                        creating dynamic and responsive web applications, proficient in both front-end and back-end
-                        technologies. My goal is to craft seamless and engaging digital experiences that leave a lasting
-                        impact.</p>
-                </div>
-            </div>
-        </div>
-    </div>
-    <!-------------------SKILL------------------------------------>
-
-    <!------------------------------------My Project------------------------------------>
-    <div id="M3">
-        <div class="project">
-            <h1 class="sub-title">My Project</h1>
-            <div class="p1">
-                <div class="work-1">
-                    <img src="image/work-1.png">
-                    <div class="layer">
-                        <h3>Spotify Clone</h3>
-                        <p>Discover new music, create playlists,</p>
-
-                        <a href="#"> <i class="fa-solid fa-up-right-from-square"></i></a>
-
-                    </div>
-                </div>
-                <div class="work-2">
-                    <img src="image/work-2.png">
-                    <div class="layer">
-                        <h3>Aluminai System</h3>
-                        <p>Outline its key features, technologies employed,</p>
-                        <a href="#"> <i class="fa-solid fa-up-right-from-square"></i></a>
-
-                    </div>
-                </div>
-
-                <div class="work-3">
-                    <img src="image/work-3.png">
-                    <div class="layer">
-                        <h3>Gym Tips</h3>
-                        <p>Enjoy a rich set of features</p>
-                        <a href="#"> <i class="fa-solid fa-up-right-from-square"></i></a>
-
+                    <div class="col-2">
+                        <h1 class="font">ABOUT Me</h1>
+                        <p>Hello, I'm Mohd Mamoon, a passionate and versatile Full Stack Web Developer. I specialize
+                            in
+                            creating dynamic and responsive web applications, proficient in both front-end and
+                            back-end
+                            technologies. My goal is to craft seamless and engaging digital experiences that leave a
+                            lasting
+                            impact.</p>
                     </div>
                 </div>
             </div>
+
         </div>
-    </div>
-    <!---------------------------------CONTACT---------------------------------------------------------->
-    <div id="M4">
-        <div class="contact">
-            <div class="row">
-                <div class="contact-left">
-                    <h1 class="sub-tiitle">Contact</h1>
-                    <p><i class="fa-solid fa-paper-plane"></i>mamoonshaikh5598@gmail.com</p>
-                    <p><i class="fa-sharp fa-solid fa-phone"></i>7080811200</p>
-                    <div class="sociol-icons">
-                        <a href=""><i class="fa-brands fa-facebook"></i></a>
-                        <a href=""><i class="fa-brands fa-instagram"></i></a>
-                        <a href=""><i class="fa-brands fa-linkedin"></i></a>
-                        <a href=""><i class="fa-brands fa-github"></i></a>
+        <!-- <div class="horizontal"></div> -->
+
+
+        <!------------------------------------My Project------------------------------------>
+        <div id="M3">
+            <div class="project">
+                <h1 class="sub-title">My Project</h1>
+                <div class="p1">
+                    <div class="work-1">
+                        <img src="image/work-1.png">
+                        <div class="layer">
+                            <h3>Spotify Clone</h3>
+                            <p>Discover new music, create playlists,</p>
+
+                            <a href="#"> <i class="fa-solid fa-up-right-from-square"></i></a>
+
+                        </div>
                     </div>
-                </div>
-                <div class="contact-right">
-                    <form>
-                        <input type="text" name="Name" placeholder="Your Name" required>
-                        <input type="email" name="email" placeholder="Your email" required>
-                        <textarea name="Message" rows="4" placeholder="Your Message"></textarea>
-                        <button type="submit">submit</button>
-                    </form>
+                    <div class="work-2">
+                        <img src="image/work-2.png">
+                        <div class="layer">
+                            <h3>Aluminai System</h3>
+                            <p>Outline its key features, technologies employed,</p>
+                            <a href="#"> <i class="fa-solid fa-up-right-from-square"></i></a>
+
+                        </div>
+                    </div>
+
+                    <div class="work-3">
+                        <img src="image/work-3.png">
+                        <div class="layer">
+                            <h3>Gym Tips</h3>
+                            <p>Enjoy a rich set of features</p>
+                            <a href="#"> <i class="fa-solid fa-up-right-from-square"></i></a>
+
+                        </div>
+                    </div>
+                    <div class="work-4">
+                        <img src="image/work-3.png">
+                        <div class="layer">
+                            <h3>Gym Tips</h3>
+                            <p>Enjoy a rich set of features</p>
+                            <a href="#"> <i class="fa-solid fa-up-right-from-square"></i></a>
+
+                        </div>
+                    </div>
                 </div>
             </div>
         </div>
-    </div>
+        <!-- <div class="horizontal"></div> -->
+        <!-------------------SKILL------------------------------------>
+        <div id="M4">
+            <div class="container">
 
-    <!-- </div> -->
+                <h1 class="skill">Skill</h1>
+
+                <div class="boxs">
+                    <div class="box"><img src="./svg/html5.svg" alt=""></div>
+                    <div class="box"><img src="./svg/css3-alt.svg"></div>
+                    <div class="box"><img src="./svg/js.svg" alt=""></div>
+                    <div class="box"><img src="./svg/bootstrap.svg" alt=""></div>
+                    <div class="box"><img src="./svg/tailwindcss-plain.svg" alt=""></div>
+                    <div class="box"><img src="./svg/react.svg" alt=""></div>
+                    <div class="box"><img src="./svg/node.svg" alt=""></div>
+                    <div class="box"><img src="./svg/express-original.svg" alt=""></div>
+                    <div class="box"><img src="./svg/github.svg" alt=""></div>
+                    <div class="box"><img src="./svg/mongodb-original-wordmark.svg" alt=""></div>
+                    <div class="box"><img src="./svg/nextjs-original-wordmark.svg" alt=""></div>
+                    <div class="box"><img src="./svg/GPT.svg" alt=""></div>
+                    <div class="box"><img src="./svg/mysql-original-wordmark.svg" alt=""></div>
+                    <div class="box"><img src="./svg/cplusplus-original.svg" alt=""></div>
+                    <div class="box"><img src="./svg/python-original-wordmark.svg" alt=""></div>
+                </div>
+            </div>
+        </div>
+        <!---------------------------------CONTACT---------------------------------------------------------->
+        <div id="M5">
+            <div class="contact">
+                <h1 class="tiitle">Contact</h1>
+                <div class="row">
+                    <div class="contact-left">
+                        <p><i class="fa-solid fa-paper-plane"></i>mamoonshaikh5598@gmail.com</p>
+                        <p><i class="fa-sharp fa-solid fa-phone"></i>7080811200</p>
+                        <div class="sociol-icons">
+                            <a href=""><i class="fa-brands fa-facebook"></i></a>
+                            <a href=""><i class="fa-brands fa-instagram"></i></a>
+                            <a href=""><i class="fa-brands fa-linkedin"></i></a>
+                            <a href=""><i class="fa-brands fa-github"></i></a>
+                        </div>
+                    </div>
+                    <div class="contact-right">
+                        <form>
+                            <input type="text" name="Name" placeholder="Your Name" required>
+                            <input type="email" name="email" placeholder="Your email" required>
+                            <textarea name="Message" rows="4" placeholder="Your Message"></textarea>
+                            <button type="submit">submit</button>
+                        </form>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+    </div>
 
     <script src="https://kit.fontawesome.com/50df5efb40.js" crossorigin="anonymous"></script>
 </body>
