--- a/index.html
+++ b/index.html
@@ -86,12 +86,20 @@
                         <div class="layer">
                             <h3>Spotify Clone</h3>
                             <p>Discover new music, create playlists,</p>
-
                             <a href="#"> <i class="fa-solid fa-up-right-from-square"></i></a>
-
                         </div>
                     </div>
                     <div class="work-2">
+                        <img src="image/Netflix (2).png">
+                        <div class="layer">
+                            <h3>Netflix Clone</h3>
+                            <p>Enjoy a rich site</p>
+                            <a href="https://mamoon-by.netlify.app/"> <i
+                                    class="fa-solid fa-up-right-from-square"></i></a>
+
+                        </div>
+                    </div>
+                    <div class="work-3">
                         <img src="image/work-2.png">
                         <div class="layer">
                             <h3>Aluminai System</h3>
@@ -101,15 +109,6 @@
                         </div>
                     </div>
 
-                    <div class="work-3">
-                        <img src="image/work-3.png">
-                        <div class="layer">
-                            <h3>Gym Tips</h3>
-                            <p>Enjoy a rich set of features</p>
-                            <a href="#"> <i class="fa-solid fa-up-right-from-square"></i></a>
-
-                        </div>
-                    </div>
                     <div class="work-4">
                         <img src="image/work-3.png">
                         <div class="layer">
@@ -119,6 +118,7 @@
 
                         </div>
                     </div>
+
                 </div>
             </div>
         </div>
@@ -152,24 +152,32 @@
         <div id="M5">
             <div class="contact">
                 <h1 class="tiitle">Contact</h1>
-                <div class="row">
-                    <div class="contact-left">
-                        <p><i class="fa-solid fa-paper-plane"></i>mamoonshaikh5598@gmail.com</p>
-                        <p><i class="fa-sharp fa-solid fa-phone"></i>7080811200</p>
-                        <div class="sociol-icons">
-                            <a href=""><i class="fa-brands fa-facebook"></i></a>
-                            <a href=""><i class="fa-brands fa-instagram"></i></a>
-                            <a href=""><i class="fa-brands fa-linkedin"></i></a>
-                            <a href=""><i class="fa-brands fa-github"></i></a>
-                        </div>
-                    </div>
-                    <div class="contact-right">
+                <div class="footer">
+                    <div class="contact-up">
                         <form>
                             <input type="text" name="Name" placeholder="Your Name" required>
                             <input type="email" name="email" placeholder="Your email" required>
                             <textarea name="Message" rows="4" placeholder="Your Message"></textarea>
-                            <button type="submit">submit</button>
+                           <div class="btn">
+                               <button type="submit">Submit Now</button>
+                           </div>
                         </form>
+                    </div>
+                    <div class="contact-down">
+                        <div class="footlast">
+                            <div class="foot-left">
+                                <p><i class="fa-solid fa-envelope"></i> mamoonshaikh5598@gmail.com</p>
+                                <p class="p2"><i class="fa-sharp fa-solid fa-phone"></i> 7080811200</p>
+                            </div>
+                            <div class="foot-right">
+                                <div class="sociol-icons">
+                                    <a href="https://www.facebook.com/sid.m.sheikh?mibextid=ZbWKwL"><i class="fa-brands fa-facebook"></i></a>
+                                    <a href=""><i class="fa-brands fa-instagram"></i></a>
+                                    <a href="linkedin.com/in/mamoon-shaikh-3333b1224"><i class="fa-brands fa-linkedin"></i></a>
+                                    <a href="https://mamoonshaikh.github.io/PORTFOLIO/"><i class="fa-brands fa-github"></i></a>
+                                </div>
+                            </div>
+                        </div>
                     </div>
                 </div>
             </div>
